--- a/aduh.html
+++ b/aduh.html
@@ -3,28 +3,109 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Layout Pink</title>
-    <link rel="stylesheet" href="styles.css">
+    <title>Layout Warna Pink</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #ffe6f2; /* Warna latar belakang pink muda */
+        }
+
+        header {
+            background-color: #ff4d94; /* Warna header */
+            color: white;
+            padding: 20px;
+            text-align: center;
+        }
+
+        nav {
+            background-color: #ff99cc; /* Warna navigasi */
+            padding: 10px;
+        }
+
+        nav ul {
+            list-style-type: none;
+            padding: 0;
+        }
+
+        nav ul li {
+            display: inline;
+            margin-right: 15px;
+        }
+
+        nav ul li a {
+            text-decoration: none;
+            color: white;
+            font-weight: bold;
+        }
+
+        main {
+            padding: 20px;
+        }
+
+        section {
+            background-color: #b57bdc; /* Warna latar belakang seksi */
+            margin: 10px 0;
+            padding: 15px;
+            border-radius: 8px;
+        }
+
+        footer {
+            background-color: #ff4d94; /* Warna footer */
+            color: white;
+            text-align: center;
+            padding: 10px;
+            position: relative;
+            bottom: 0;
+            width: 100%;
+        }
+    </style>
 </head>
 <body>
     <header>
-        <h1>Selamat Datang di Layout Pink</h1>
+        <img src="5814067.png" alt="Logo Cupcake" width="100" height="100">
+        <h1>Welcome To Cupcake Shop!</h1> 
     </header>
     <nav>
         <ul>
             <li><a href="#">Beranda</a></li>
-            <li><a href="#">Tentang</a></li>
-            <li><a href="#">Kontak</a></li>
+            
+                    <li><a href="#tentang">Tentang</a></li> <!-- Tautan ke bagian Tentang -->
+                    <li><a href="#">Layanan</a></li>
+                    <li><a href="#">Kontak</a></li>
+                    <li><a href="#">Pesan</a></li>
+                    <li><a href="#">Testimoni</a></li>
+                    <li><a href="#">Blog</a></li>
+                    <li><a href="#">Galeri</a></li>
+                </ul>
+            </nav>
+            <main>
+                <section id="tentang"> <!-- Bagian Tentang -->
+                    <h2>Tentang Kami</h2>
+                    <p>Selamat datang di Cupcake Shop! Kami adalah toko kue yang menyediakan berbagai macam cupcake dan pastry berkualitas tinggi. Semua produk kami dibuat dengan bahan-bahan terbaik untuk memastikan kepuasan pelanggan.</p>
+                </section>
+                <section id="Beranda"> <!-- Bagian Beranda -->
+                    <h2>Beranda</h2>
+                    <p>Selamat datang di Beranda Cupcake Shop! Temukan berbagai pilihan cupcake dan pastry yang lezat di sini.</p>
+                </section>
+                <section>
+                  <h2>Strawberry</h2> 
+                   <p>Rp.30.000</p>
+                </section>
+                <section>
+                    <h2>Croissant</h2>
+                    <p>Rp.50.000</p>
+                </section>
+                <section>
+                    <h2>Burn Cheese Cake</h2>
+                    <p>Rp.100.000</p>
+                </section>
+            </main>
+
         </ul>
-    </nav>
-    <main>
-        <section>
-            <h2>Judui</h2>
-            <p>Ini adalah contohi. Anda dapat menambahkan lebih banyak teks di sini.</p>
-        </section>
-    </main>
     <footer>
-        <p>&copy; 2023 Layout Pink. Semua hak dilindungi.</p>
+        <p>Thank You For Your </p>
     </footer>
 </body>
 </html>
